--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,12 @@
   "description": "Modify the text on the webpage, either by changing the font to comic sans or jumbling the letters",
   "version": "1.0",
   "manifest_version": 3,
+  "content_scripts": 
+    {
+      "css": ["style.css"]
+    },
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "activeTab"]
+  "permissions": ["storage", "activeTab", "scripting"]
 }
